# todo-flask

./: .gitignore  README.md  app.py  config.py  pyproject.toml
.devcontainer/: devcontainer.json
static/: style.css
templates/: index.html
